--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="checkYourEmail">Invalid Email!</string>
     <string name="communicate">Communicate</string>
     <string name="close">Close</string>
+    <string name="date">Date</string>
 
     <string name="home">Home</string>
     <string name="input_email">Input email</string>
@@ -15,8 +16,8 @@
     <string name="message">Timetable</string>
 
     <string name="open">Open</string>
+    <string name="period">Period</string>
     <string name="profile">Profile</string>
-
     <string name="password_forgotten">Password forgotten?</string>
     <string name="rememberMe">Remember me</string>
     <string name="rate">About us</string>
@@ -25,13 +26,16 @@
     <string name="settings">Settings</string>
     <string name="signIn">Sign in</string>
     <string name="signup">Sign Up</string>
+    <string name="signup2"><u><i>Don\'t have an account? Sign up</i></u></string>
     <string name="sync">Evaluation</string>
     <string name="share">Transport Line</string>
+    <string name="subject">Subject</string>
     <string name="trash">Absences</string>
     <string name="title">Logout</string>
-    <string name="timetable">Timetable here</string>
+    <string name="timetable">Timetables list</string>
     <string name="evaluation">Exams + Results + Credits</string>
     <string name="absences">See your absences here</string>
+    <string name="view">View</string>
     <string name="transport">Transport Line</string>
     <string name="about_us">About us</string>
     <!-- TODO: Remove or change this placeholder text -->
