--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,34 @@
 <resources>
+    <string name="rate">About us</string>
+    <string name="about_us">About us</string>
+
+
     <string name="accueil">Hii</string>
     <string name="app_name">Esprit_Space</string>
 
-    <string name="checkYourEmail">Invalid Email!</string>
+    <string name="cc">CC</string>
     <string name="communicate">Communicate</string>
     <string name="close">Close</string>
     <string name="date">Date</string>
 
     <string name="edit_profile">Edit Profile</string>
+    <string name="exam">Exam</string>
 
     <string name="home">Home</string>
+    <string name="checkYourEmail">Invalid Email!</string>
     <string name="input_email">Input email</string>
     <string name="input_password">Input password</string>
 
     <string name="login">LOGIN</string>
     <string name="mustNotBeEmpty">Must not be empty!</string>
-    <string name="message">Timetable</string>
+
 
     <string name="open">Open</string>
     <string name="period">Period</string>
     <string name="profile">Profile</string>
     <string name="password_forgotten">Password forgotten?</string>
     <string name="rememberMe">Remember me</string>
-    <string name="rate">About us</string>
+
     <string name="safa">Safa Hathroubi</string>
     <string name="safa_email">safa.hathroubi@esprit.tn</string>
     <string name="settings">Settings</string>
@@ -38,8 +44,10 @@
     <string name="evaluation">Exams + Results + Credits</string>
     <string name="absences">See your absences here</string>
     <string name="view">View</string>
+    <string name="view_results">View all your results here:</string>
     <string name="transport">Transport Line</string>
-    <string name="about_us">About us</string>
+    <string name="message">Timetable</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
