--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="rate">About us</string>
     <string name="about_us">About us</string>
-
+    <string name="abs_list">Absences list:</string>
 
     <string name="accueil">Hii</string>
     <string name="app_name">Esprit_Space</string>
@@ -18,6 +18,7 @@
     <string name="checkYourEmail">Invalid Email!</string>
     <string name="input_email">Input email</string>
     <string name="input_password">Input password</string>
+    <string name="justif">Justification</string>
 
     <string name="login">LOGIN</string>
     <string name="mustNotBeEmpty">Must not be empty!</string>
